# instructor_helpers

./: README.md  example.ipynb  pyproject.toml
src/instructor_helpers/: __init__.py  instructor_helpers.py
