[project]
name = "instructor-helpers"
version = "0.1.0"
description = "Various Helper Functions for Using Instructor"
authors = [{ name = "Chris", email = "chris@cjrobson.com" }]
dependencies = ["pydantic>=2.8.2", "instructor>=1.4.0", "ipykernel>=6.29.5"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/instructor_helpers"]
